--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  padding: 16px;
+  display: flex;
+  justify-content: start;
+}
+
+button a {
+  color: white;
+  text-decoration: none;
+  &:hover {
+    color: white;
+  }
+}
+
+.background-yellow {
+  background-color: rgb(255, 255, 225);
+}
