--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,5 +1,17 @@
-<p>Question: <%= params[:question] %></p>
-<br>
-<p>Answer: <%= @answer %></p>
-<br>
-<%= link_to "Ask another question", ask_path %>
+<div class="mb-3 p-0 w-100">
+
+  <div class="border-start border-5 p-3 mb-3">
+    <p><em>You:</em></p>
+    <p><%= params[:question] %></p>
+  </div>
+
+  <div class="border-start border-5 p-3 mb-3 background-yellow">
+    <p><em>Your coach:</em></p>
+    <p><%= @answer %></p>
+  </div>
+
+</div>
+
+<button class="btn btn-primary">
+  <%= link_to "Ask another question", ask_path %>
+</button>
