--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,4 @@
-<form action="/answer" method="get">
-  <input type="text" name="question" id="" placeholder="Ask me a question boss">
-  <input type="submit">
+<form action="/answer" method="get" class="input-group">
+  <input type="text" name="question" id="question" class="form-control" placeholder="Ask me a question boss">
+  <button type="submit" class="btn btn-primary">Ask</button>
 </form>
