tried setting up custom auto-tests but ran into 'Failed to find Chrome Binary' error

--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,3 +1,4 @@
+<label for="question" class="mb-3">Ask your coach anything</label>
 <form action="/answer" method="get" class="input-group">
   <input type="text" name="question" id="question" class="form-control" placeholder="Ask me a question boss">
   <button type="submit" class="btn btn-primary">Ask</button>
